--- a/index.html
+++ b/index.html
@@ -85,27 +85,31 @@
       </article>
 
       <article id="contact" class="content">
-        Meet The Team Behind ExpressiveJS!
+        <span>Meet The Team Behind ExpressiveJS!</span>
         <div class="teamGram">
           <div class="members">
             <img src="./images/bioPictures/glenn.png"> <br>
             Glenn Alexander <br>
-            <p>Software Engineer</p>
+            <p>Software Engineer</p> <br>
+            <a href="github.com/gcz23">GitHub</a>
           </div>
           <div class="members">
             <img src="./images/bioPictures/ryan.png"> <br>
             Ryan Fowlkes Smith <br>
-            <p>Software Engineer</p>
+            <p>Software Engineer</p> <br>
+            <a href="github.com/ryanfowlkes">GitHub</a>
           </div>
           <div class="members">
             <img src="./images/bioPictures/kangseon.png"> <br>
             Kangseon Cho <br>
-            <p>Software Engineer</p>
+            <p>Software Engineer</p> <br>
+            <a href="github.com/littletoy">GitHub</a>
           </div>
           <div class="members">
             <img src="./images/bioPictures/mary.png"> <br>
             Mary Snow <br>
-            <p>Software Engineer</p>
+            <p>Software Engineer</p> <br>
+            <a href="github.com/Mary-Snow">GitHub</a>
           </div>
         </div>
       </article>
