vertical adjustment for contact

--- a/index.html
+++ b/index.html
@@ -91,25 +91,25 @@
             <img src="./images/bioPictures/glenn.png"> <br>
             Glenn Alexander <br>
             <p>Software Engineer</p> <br>
-            <a href="github.com/gcz23">GitHub</a>
+            <a href="https://github.com/gcz23">GitHub</a>
           </div>
           <div class="members">
             <img src="./images/bioPictures/ryan.png"> <br>
             Ryan Fowlkes Smith <br>
             <p>Software Engineer</p> <br>
-            <a href="github.com/ryanfowlkes">GitHub</a>
+            <a href="https://github.com/ryanfowlkes">GitHub</a>
           </div>
           <div class="members">
             <img src="./images/bioPictures/kangseon.png"> <br>
             Kangseon Cho <br>
             <p>Software Engineer</p> <br>
-            <a href="github.com/littletoy">GitHub</a>
+            <a href="https://github.com/littletoy">GitHub</a>
           </div>
           <div class="members">
             <img src="./images/bioPictures/mary.png"> <br>
             Mary Snow <br>
             <p>Software Engineer</p> <br>
-            <a href="github.com/Mary-Snow">GitHub</a>
+            <a href="https://github.com/Mary-Snow">GitHub</a>
           </div>
         </div>
       </article>
