--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
 
 </script>
 
-  <!--<link rel="stylesheet" href="./style.css">-->
-  <link rel="stylesheet" href="https://s3-us-west-1.amazonaws.com/www.expressivejs.io/style.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+  <link rel="stylesheet" href="./style.css">
+  <!--<link rel="stylesheet" href="https://s3-us-west-1.amazonaws.com/www.expressivejs.io/style.css">-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 </head>
 
@@ -131,6 +134,7 @@
 
   </div>
 </body>
-<script src="https://s3-us-west-1.amazonaws.com/www.expressivejs.io/main.js"></script>
+<script src="./main.js"></script>
+<!--<script src="https://s3-us-west-1.amazonaws.com/www.expressivejs.io/main.js"></script>-->
 
 </html>
