--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </button>
         </div>
         <div id="contact" class="container-fluid">
-          <!--<span>Meet The Team Behind ExpressiveJS!</span>-->
+          <span>Meet The Team Behind ExpressiveJS!</span>
           <div class="row teamGram">
             <div class="members col-md-3">
               <img src="./images/bioPictures/glenn.png" alt="Glenn Alexander"> <br> Glenn Alexander <br>
