move button to middle

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   <div class="container" id="main">
     <div class="row">
       <div class="col-md-12 page-wrapper">
+
         <div id="home" class="">
           <div class="title"><i>Expressive<span id="js">JS</span></i></div>
           <div id="homeParagraph">
@@ -67,19 +68,25 @@
             teaching alike, Expressive enables developers to send client requests to their Express server, and then render
             a dynamic and comprehensive visualization of server state throughout the lifespan of each request <b>-- all from the command line</b>.
           </div>
+          <div class="downButtonDiv">
           <button id='homeArrow' aria-label="next tab">
-          <span class="downButton"><img src="./images/arrow/arrow-down.png" alt="Down Arrow"></span>
-        </button>
+            <span class="downButton"><img src="./images/arrow/arrow-down.png" alt="Down Arrow"></span>
+          </button>
+          </div>
         </div>
+
         <div id="sample" class="">
           <div id="sampleImageDiv">
             <span id="sampleHeader">Track your server routes at every step!</span>
             <img id="sampleImage" src="./images/sample-gui/expressive-sample.png" alt="Expressive GUI Sample">
           </div>
+          <div class="downButtonDiv">
           <button id='sampleArrow' aria-label="next tab">
-          <span class="downButton"><img src="./images/arrow/arrow-down.png" alt="Down Arrow"></span>
-        </button>
+            <span class="downButton"><img src="./images/arrow/arrow-down.png" alt="Down Arrow"></span>
+          </button>
+          </div>
         </div>
+
         <div id="quickstart" class="">
           <h1>Quick Start</h1>
           <div class="install">
@@ -106,10 +113,13 @@
             from the xpr-test command. <br>
             <span class="commands">$ xpr:</span> Equivalent to running xpr-test followed by xpr-build followed by xpr-display.
           </div>
+          <div class="downButtonDiv">
           <button id='quickstartArrow' aria-label="next tab">
-          <span class="downButton"><img src="./images/arrow/arrow-down.png" alt="Down Arrow"></span>
-        </button>
+            <span class="downButton"><img src="./images/arrow/arrow-down.png" alt="Down Arrow"></span>
+          </button>
+          </div>
         </div>
+
         <div id="contact" class="container-fluid">
           <span>Meet The Team Behind ExpressiveJS!</span>
           <div class="row teamGram">
