--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-  <link rel="stylesheet" href="./style.css">
-  <!--<link rel="stylesheet" href="https://s3-us-west-1.amazonaws.com/www.expressivejs.io/style.css">-->
+  <link rel="stylesheet" href="./src/style.css">
 </head>
 
 <body>
@@ -61,33 +60,33 @@
     <div class="row">
       <div class="col-md-12 page-wrapper">
 
-        <div id="home" class="">
+        <div id="home">
           <div class="title"><i>Expressive<span id="js">JS</span></i></div>
           <div id="homeParagraph">
             Expressive is a developer tool that tracks and visualizes server routes in Express applications. Useful for debugging and
             teaching alike, Expressive enables developers to send client requests to their Express server, and then render
             a dynamic and comprehensive visualization of server state throughout the lifespan of each request <b>-- all from the command line</b>.
           </div>
-          <div class="downButtonDiv">
+          <div class="downButtonDiv" id="homeDown">
           <button id='homeArrow' aria-label="next tab">
             <span class="downButton"><img src="./images/arrow/arrow-down.png" alt="Down Arrow"></span>
           </button>
           </div>
         </div>
 
-        <div id="sample" class="">
+        <div id="sample">
+          <span id="sampleHeader">Track your server routes at every step!</span>
           <div id="sampleImageDiv">
-            <span id="sampleHeader">Track your server routes at every step!</span>
             <img id="sampleImage" src="./images/sample-gui/expressive-sample.png" alt="Expressive GUI Sample">
           </div>
-          <div class="downButtonDiv">
+          <div class="downButtonDiv" id="sampleDown">
           <button id='sampleArrow' aria-label="next tab">
             <span class="downButton"><img src="./images/arrow/arrow-down.png" alt="Down Arrow"></span>
           </button>
           </div>
         </div>
 
-        <div id="quickstart" class="">
+        <div id="quickstart">
           <h1>Quick Start</h1>
           <div class="install">
             <h3>Install: </h3>
@@ -99,9 +98,9 @@
             <h3>Server Files: </h3>
             1) Modify Express server files <br> Replace all instance of
             <u>require('express')</u> with
-            <u>require('expressivejs')</u>. This will enable Expressive to progressively document the state of client requests
-            and server responses. <br> 2) Run xpr-init <br> This file should be called
-            <u>expressive.config.js</u> and be located in your application's root directory. <br>
+            <u>require('expressive-proxy')</u>. This will enable Expressive to progressively document the state of client requests
+            and server responses. <br> 2) Run xpr-init <br> Enter <u>$ xpr-init</u> from your application's root directory to create the basic shell of your <u>expressive.config.js</u> file. <br>
+            For more details on <u>expressive.config.js</u>, please visit <a src='https://github.com/venogram/ExpressiveJS'>expressive Github</a>.
           </div>
           <div class="commandLines">
             <h3>Command Lines: </h3>
@@ -113,7 +112,7 @@
             from the xpr-test command. <br>
             <span class="commands">$ xpr:</span> Equivalent to running xpr-test followed by xpr-build followed by xpr-display.
           </div>
-          <div class="downButtonDiv">
+          <div class="downButtonDiv" id="quickstartDown">
           <button id='quickstartArrow' aria-label="next tab">
             <span class="downButton"><img src="./images/arrow/arrow-down.png" alt="Down Arrow"></span>
           </button>
@@ -124,23 +123,23 @@
           <span>Meet The Team Behind ExpressiveJS!</span>
           <div class="row teamGram">
             <div class="members col-md-3">
-              <img src="./images/bioPictures/glenn.png" alt="Glenn Alexander"> <br> Glenn Alexander <br>
-              <p>Software Engineer</p> <br>
-              <a href="https://github.com/gcz23">GitHub</a>
+              <img src="./images/bioPictures/glenn.png" alt="Glenn Alexander"> <br><br> Glenn Alexander <br>
+              <p>Software Engineer</p>
+              <a href="https://github.com/gcz23">GitHub</a> <br>
             </div>
             <div class="members col-md-3">
-              <img src="./images/bioPictures/ryan.png" alt="Ryan Fowlkes Smith"> <br> Ryan Fowlkes <br>
-              <p>Software Engineer</p> <br>
-              <a href="https://github.com/ryanfowlkes">GitHub</a>
+              <img src="./images/bioPictures/ryan.png" alt="Ryan Fowlkes Smith"> <br><br> Ryan Fowlkes <br>
+              <p>Software Engineer</p>
+              <a href="https://github.com/ryanfowlkes">GitHub</a> <br>
             </div>
             <div class="members col-md-3">
-              <img src="./images/bioPictures/kangseon.png" alt="Kangseon Cho"> <br> Kangseon Cho <br>
-              <p>Software Engineer</p> <br>
-              <a href="https://github.com/littletoy">GitHub</a>
+              <img src="./images/bioPictures/kangseon.png" alt="Kangseon Cho"> <br><br> Kangseon Cho <br>
+              <p>Software Engineer</p>
+              <a href="https://github.com/littletoy">GitHub</a> <br>
             </div>
             <div class="members col-md-3">
-              <img src="./images/bioPictures/mary.png" alt="Mary Snow"> <br> Mary Snow <br>
-              <p>Software Engineer</p> <br>
+              <img src="./images/bioPictures/mary.png" alt="Mary Snow"> <br><br> Mary Snow <br>
+              <p>Software Engineer</p>
               <a href="https://github.com/Mary-Snow">GitHub</a>
             </div>
           </div>
@@ -149,7 +148,6 @@
     </div>
   </div>
 </body>
-<script src="./main.js"></script>
-<!--<script src="https://s3-us-west-1.amazonaws.com/www.expressivejs.io/main.js"></script>-->
+<script src="./src/main.js"></script>
 
 </html>
