attempt at adjusting screen size for various devices

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-  <div class="nav-side-menu">
+  <section class="nav-side-menu">
     <div class="brand">
       <img id="mainLogo" src="./images/xpr-logo/whiteEXPRLogo@2x.png">
     </div>
@@ -55,7 +55,7 @@
         </li>
       </ul>
     </div>
-  </div>
+  </section>
   <div class="container" id="main">
     <div class="row">
       <div class="col-md-12 page-wrapper">
