implement more html semantic divs

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
   </section>
   <div class="container" id="main">
     <div class="row">
-      <div class="col-md-12 page-wrapper">
+      <section class="col-md-12 page-wrapper">
 
-        <div id="home">
+        <article id="home">
           <div class="title"><i>Expressive<span id="js">JS</span></i></div>
           <div id="homeParagraph">
             Expressive is a developer tool that tracks and visualizes server routes in Express applications. Useful for debugging and
@@ -72,9 +72,9 @@
             <span class="downButton"><img src="./images/arrow/arrow-down.png" alt="Down Arrow"></span>
           </button>
           </div>
-        </div>
+        </article>
 
-        <div id="sample">
+        <article id="sample">
           <span id="sampleHeader">Track your server routes at every step!</span>
           <div id="sampleImageDiv">
             <img id="sampleImage" src="./images/sample-gui/expressive-sample.png" alt="Expressive GUI Sample">
@@ -84,9 +84,9 @@
             <span class="downButton"><img src="./images/arrow/arrow-down.png" alt="Down Arrow"></span>
           </button>
           </div>
-        </div>
+        </article>
 
-        <div id="quickstart">
+        <article id="quickstart">
           <h1>Quick Start</h1>
           <div class="install">
             <h3>Install: </h3>
@@ -100,7 +100,7 @@
             <u>require('express')</u> with
             <u>require('expressive-proxy')</u>. This will enable Expressive to progressively document the state of client requests
             and server responses. <br> 2) Run xpr-init <br> Enter <u>$ xpr-init</u> from your application's root directory to create the basic shell of your <u>expressive.config.js</u> file. <br>
-            For more details on <u>expressive.config.js</u>, please visit <a src='https://github.com/venogram/ExpressiveJS'>expressive Github</a>.
+            For more details on <u>expressive.config.js</u>, please visit <a href='https://github.com/venogram/ExpressiveJS'>expressive Github</a>.
           </div>
           <div class="commandLines">
             <h3>Command Lines: </h3>
@@ -117,9 +117,9 @@
             <span class="downButton"><img src="./images/arrow/arrow-down.png" alt="Down Arrow"></span>
           </button>
           </div>
-        </div>
+        </article>
 
-        <div id="contact" class="container-fluid">
+        <article id="contact" class="container-fluid">
           <span>Meet The Team Behind ExpressiveJS!</span>
           <div class="row teamGram">
             <div class="members col-md-3">
@@ -143,8 +143,8 @@
               <a href="https://github.com/Mary-Snow">GitHub</a>
             </div>
           </div>
-        </div>
-      </div>
+        </article>
+      </section>
     </div>
   </div>
 </body>
